--- a/Analysis document & report.ipynb
+++ b/Analysis document & report.ipynb
@@ -548,9 +548,11 @@
             "source": [
                 "retention_rate = pd.DataFrame({\n",
                 "    'ver_152': df_152['num_of_player'],\n",
-                "    'retention_rate_152' : round(df_152['num_of_player'] / player_count_152 * 100, 2),\n",
+                "    'retention_rate_152' : round(df_152['num_of_player'] \n",
+                "                                 / player_count_152 * 100, 2),\n",
                 "    'ver_160': df_160['num_of_player'],\n",
-                "    'retention_rate_160' : round(df_160['num_of_player'] / player_count_160 * 100, 2) \n",
+                "    'retention_rate_160' : round(df_160['num_of_player'] \n",
+                "                                 / player_count_160 * 100, 2) \n",
                 "})\n",
                 "retention_rate.index.name = 'day_dif'\n",
                 "retention_rate.drop(index = 0, inplace = True)\n",
@@ -570,7 +572,8 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "retention_rate['increase_rate'] = round(retention_rate['retention_rate_160'] / retention_rate['retention_rate_152'] * 100 - 100, 2)"
+                "retention_rate['increase_rate'] = round(retention_rate['retention_rate_160'] \n",
+                "                                        / retention_rate['retention_rate_152'] * 100 - 100, 2)"
             ]
         },
         {
@@ -643,7 +646,7 @@
                 }
             ],
             "source": [
-                "retention_rate[retention_rate.index == 1 ]"
+                "retention_rate[retention_rate.index == 1]"
             ]
         },
         {
@@ -786,13 +789,6 @@
             ]
         },
         {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": []
-        },
-        {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
@@ -800,11 +796,297 @@
             ]
         },
         {
-            "cell_type": "code",
-            "execution_count": null,
+            "cell_type": "markdown",
             "metadata": {},
-            "outputs": [],
-            "source": []
+            "source": [
+                "#### ***Average total playtime across versions***"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 3,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/html": [
+                            "<div>\n",
+                            "<style scoped>\n",
+                            "    .dataframe tbody tr th:only-of-type {\n",
+                            "        vertical-align: middle;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe tbody tr th {\n",
+                            "        vertical-align: top;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe thead th {\n",
+                            "        text-align: right;\n",
+                            "    }\n",
+                            "</style>\n",
+                            "<table border=\"1\" class=\"dataframe\">\n",
+                            "  <thead>\n",
+                            "    <tr style=\"text-align: right;\">\n",
+                            "      <th></th>\n",
+                            "      <th>ver_152</th>\n",
+                            "      <th>ver_160</th>\n",
+                            "    </tr>\n",
+                            "  </thead>\n",
+                            "  <tbody>\n",
+                            "    <tr>\n",
+                            "      <th>count</th>\n",
+                            "      <td>6435.000000</td>\n",
+                            "      <td>6607.000000</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>mean</th>\n",
+                            "      <td>779.674903</td>\n",
+                            "      <td>988.136673</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>std</th>\n",
+                            "      <td>3482.261223</td>\n",
+                            "      <td>4342.895857</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>min</th>\n",
+                            "      <td>6.000000</td>\n",
+                            "      <td>7.000000</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>25%</th>\n",
+                            "      <td>61.000000</td>\n",
+                            "      <td>69.000000</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>50%</th>\n",
+                            "      <td>133.000000</td>\n",
+                            "      <td>153.000000</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>75%</th>\n",
+                            "      <td>372.000000</td>\n",
+                            "      <td>451.000000</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>max</th>\n",
+                            "      <td>97182.000000</td>\n",
+                            "      <td>118078.000000</td>\n",
+                            "    </tr>\n",
+                            "  </tbody>\n",
+                            "</table>\n",
+                            "</div>"
+                        ],
+                        "text/plain": [
+                            "            ver_152        ver_160\n",
+                            "count   6435.000000    6607.000000\n",
+                            "mean     779.674903     988.136673\n",
+                            "std     3482.261223    4342.895857\n",
+                            "min        6.000000       7.000000\n",
+                            "25%       61.000000      69.000000\n",
+                            "50%      133.000000     153.000000\n",
+                            "75%      372.000000     451.000000\n",
+                            "max    97182.000000  118078.000000"
+                        ]
+                    },
+                    "execution_count": 3,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "df_playtime = sqldf('''\n",
+                "SELECT \n",
+                "    user,\n",
+                "    SUM(quantity) as play_time,\n",
+                "    version\n",
+                "FROM \n",
+                "    data \n",
+                "WHERE \n",
+                "    event_name = 'game_end' \n",
+                "GROUP BY \n",
+                "    user \n",
+                "''')\n",
+                "\n",
+                "playtime_152 = df_playtime[df_playtime['version'] == '1.5.2'].describe()\n",
+                "playtime_160 = df_playtime[df_playtime['version'] == '1.6.0'].describe()\n",
+                "\n",
+                "playtime = pd.DataFrame({\n",
+                "    'ver_152' : playtime_152['play_time'],\n",
+                "    'ver_160' : playtime_160['play_time']\n",
+                "})\n",
+                "playtime"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "The playtime increased modestly in version 1.6.0 with positive return on mean, median and both first and third quartiles. But similar to other statistic, its significance can be questioned further.   "
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "#### **_Average total user engagement_**"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 4,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/html": [
+                            "<div>\n",
+                            "<style scoped>\n",
+                            "    .dataframe tbody tr th:only-of-type {\n",
+                            "        vertical-align: middle;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe tbody tr th {\n",
+                            "        vertical-align: top;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe thead th {\n",
+                            "        text-align: right;\n",
+                            "    }\n",
+                            "</style>\n",
+                            "<table border=\"1\" class=\"dataframe\">\n",
+                            "  <thead>\n",
+                            "    <tr style=\"text-align: right;\">\n",
+                            "      <th></th>\n",
+                            "      <th>ver_152</th>\n",
+                            "      <th>ver_160</th>\n",
+                            "    </tr>\n",
+                            "  </thead>\n",
+                            "  <tbody>\n",
+                            "    <tr>\n",
+                            "      <th>count</th>\n",
+                            "      <td>6671.000000</td>\n",
+                            "      <td>6911.000000</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>mean</th>\n",
+                            "      <td>13.515815</td>\n",
+                            "      <td>15.350166</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>std</th>\n",
+                            "      <td>35.046254</td>\n",
+                            "      <td>34.540717</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>min</th>\n",
+                            "      <td>1.000000</td>\n",
+                            "      <td>1.000000</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>25%</th>\n",
+                            "      <td>3.000000</td>\n",
+                            "      <td>4.000000</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>50%</th>\n",
+                            "      <td>6.000000</td>\n",
+                            "      <td>7.000000</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>75%</th>\n",
+                            "      <td>13.000000</td>\n",
+                            "      <td>14.000000</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>max</th>\n",
+                            "      <td>1276.000000</td>\n",
+                            "      <td>952.000000</td>\n",
+                            "    </tr>\n",
+                            "  </tbody>\n",
+                            "</table>\n",
+                            "</div>"
+                        ],
+                        "text/plain": [
+                            "           ver_152      ver_160\n",
+                            "count  6671.000000  6911.000000\n",
+                            "mean     13.515815    15.350166\n",
+                            "std      35.046254    34.540717\n",
+                            "min       1.000000     1.000000\n",
+                            "25%       3.000000     4.000000\n",
+                            "50%       6.000000     7.000000\n",
+                            "75%      13.000000    14.000000\n",
+                            "max    1276.000000   952.000000"
+                        ]
+                    },
+                    "execution_count": 4,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "df_ue = sqldf('''\n",
+                "SELECT \n",
+                "    user,\n",
+                "    COUNT(event_name) as user_engagement,\n",
+                "    version\n",
+                "FROM \n",
+                "    data \n",
+                "WHERE \n",
+                "    event_name = 'user_engagement' \n",
+                "GROUP BY \n",
+                "    user \n",
+                "''')\n",
+                "\n",
+                "ue_152 = df_ue[df_ue['version'] == '1.5.2'].describe()\n",
+                "ue_160 = df_ue[df_ue['version'] == '1.6.0'].describe()\n",
+                "\n",
+                "ue = pd.DataFrame({\n",
+                "    'ver_152' : ue_152['user_engagement'],\n",
+                "    'ver_160' : ue_160['user_engagement']\n",
+                "})\n",
+                "ue"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "All 3 quartiles return with one engagement difference from version 1.5.2 to 1.6.0. "
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "**Key findings**\n",
+                "\n",
+                "- Version 1.6.0 returns positive on all relevant aspects, including retention rate, playtime and user engagement count. However, the increased number can be deemed insignificant depending on the business objective. \n",
+                "\n",
+                "**Acknowledgement**\n",
+                "\n",
+                "- Due to the lack of experience in the given field, my judgement on the statistical significance of version 1.6.0's positive return might not be reliable. Nevertheless, I still believe that version 1.6.0 can benefit from further improvement before launching in order to yield better result.  "
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## 3\\. **Recommendation**\n",
+                "\n",
+                "**Keep a minimal aesthetic**\n",
+                "\n",
+                "- When playing the game, I found that the transition to the final artwork was somewhat satisfying. This satisfaction could be enhanced with a minial level UI with only neccessary color to instruct the player (slide 1). The transition from a barely nothing screen to a colorfull illustration may provide a better user satisfaction. \n",
+                "\n",
+                "**Illustration**: https://view.genial.ly/661f45f4619969001404849b/presentation-indiez-tutorial-ui-demo \n",
+                "\n",
+                "**Emphasize the color**\n",
+                "\n",
+                "- One issue I had with the tutorial was the red circle that highlight the number. I would prefer something similar to the illustration for more visual clarity and better gamerule understanding (slide 2). \n",
+                "\n",
+                "- Since the game has a colorful theme, it would be reasonable to emphasize it with color. My idea of integrating the theme of color to the game is to highlight different elements of the tutorial using different colors. For example, the tutorial in version 1.6.0 can be greatly improved using a color highlighter and animation to instruct player (slide 2). The same priciple can be applied to when player complete a row or column (slide 3). \n",
+                "\n"
+            ]
         }
     ],
     "metadata": {
